// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`data loading transitioning back after a reload loads data for the previous route 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"utf-8\\" />
    <!--$-->
    <title>Public Gists</title>
    <meta name=\\"description\\" content=\\"View the latest gists from the public\\" />
    <!--/$-->
    <link
      rel=\\"stylesheet\\"
      href=\\"//unpkg.com/@exampledev/new.css@1.1.3/new.css\\"
    />
    <!--$-->
    <link rel=\\"stylesheet\\" href=\\"/build/assets/global-ec887178.css\\" />
    <link
      rel=\\"stylesheet\\"
      href=\\"/build/assets/style/routes/gists-d45b2a57.css\\"
    />
    <!--/$-->
  </head>
  <body class=\\"m-4\\">
    <!--$-->
    <div data-test-id=\\"/gists\\">
      <header>
        <h1>Gists</h1>
        <ul>
          <li>
            <a class=\\"text-blue-700 underline\\" href=\\"/gists/ryanflorence\\"
              >Ryan Florence<!-- -->
            </a>
          </li>
          <li>
            <a class=\\"text-blue-700 underline\\" href=\\"/gists/mjackson\\"
              >Michael Jackson<!-- -->
            </a>
          </li>
        </ul>
      </header>
      <div data-test-id=\\"/gists/index\\">
        <h2>Public Gists</h2>
        <ul>
          <li><a>remix-server.jsx</a></li>
        </ul>
      </div>
    </div>
    <!--/$-->
    <script>
      __remixContext = {
        browserManifest: {
          \\"entry-browser\\": {
            fileName: \\"entry-browser.js\\",
            imports: [
              \\"index-d9da1d1d.js\\",
              \\"index-dcc9183b.js\\",
              \\"index-76e7e8b5.js\\",
            ],
          },
          \\"global.css\\": { fileName: \\"assets/global-ec887178.css\\" },
          \\"routes/gists\\": {
            fileName: \\"routes/gists.js\\",
            imports: [
              \\"index-d9da1d1d.js\\",
              \\"index-dcc9183b.js\\",
              \\"index-76e7e8b5.js\\",
            ],
          },
          \\"routes/gists/index\\": {
            fileName: \\"routes/gists/index.js\\",
            imports: [
              \\"index-d9da1d1d.js\\",
              \\"index-dcc9183b.js\\",
              \\"index-76e7e8b5.js\\",
            ],
          },
          \\"style/routes/gists.css\\": {
            fileName: \\"assets/style/routes/gists-d45b2a57.css\\",
          },
        },
        globalData: { useScripts: true },
        publicPath: \\"/build/\\",
        routeData: {
          \\"routes/gists\\": {
            users: [
              { id: \\"ryanflorence\\", name: \\"Ryan Florence\\" },
              { id: \\"mjackson\\", name: \\"Michael Jackson\\" },
            ],
          },
          \\"routes/gists/index\\": [
            {
              url:
                \\"https://api.github.com/gists/610613b54e5b34f8122d1ba4a3da21a9\\",
              id: \\"610613b54e5b34f8122d1ba4a3da21a9\\",
              files: { \\"remix-server.jsx\\": { filename: \\"remix-server.jsx\\" } },
              owner: {
                login: \\"ryanflorence\\",
                id: 100200,
                avatar_url:
                  \\"https://avatars0.githubusercontent.com/u/100200?v=4\\",
              },
            },
          ],
        },
        routeManifest: {
          \\"routes/gists\\": { id: \\"routes/gists\\", path: \\"gists\\" },
          \\"routes/gists/index\\": {
            id: \\"routes/gists/index\\",
            path: \\"/\\",
            parentId: \\"routes/gists\\",
          },
        },
        routeParams: { \\"routes/gists\\": {}, \\"routes/gists/index\\": {} },
      };
    </script>
    <script type=\\"module\\" src=\\"/build/entry-browser.js\\"></script>
  </body>
</html>
"
`;

exports[`data loading transitioning back after a reload loads data for the previous route 2`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"utf-8\\" />
    <!--$-->
    <title>1 gists from mjackson</title>
    <meta name=\\"description\\" content=\\"View all of the gists from mjackson\\" />
    <!--/$-->
    <link
      rel=\\"stylesheet\\"
      href=\\"//unpkg.com/@exampledev/new.css@1.1.3/new.css\\"
    />
    <!--$-->
    <link rel=\\"stylesheet\\" href=\\"/build/assets/global-ec887178.css\\" />
    <link
      rel=\\"stylesheet\\"
      href=\\"/build/assets/style/routes/gists-d45b2a57.css\\"
    />
    <!--/$-->
  </head>
  <body class=\\"m-4\\">
    <!--$-->
    <div data-test-id=\\"/gists\\">
      <header>
        <h1>Gists</h1>
        <ul>
          <li>
            <a class=\\"text-blue-700 underline\\" href=\\"/gists/ryanflorence\\"
              >Ryan Florence<!-- -->
            </a>
          </li>
          <li>
            <a class=\\"text-blue-700 underline\\" href=\\"/gists/mjackson\\"
              >Michael Jackson<!-- -->
            </a>
          </li>
        </ul>
      </header>
      <div data-test-id=\\"/gists/$username\\">
        <h2>All gists from mjackson</h2>
        <ul>
          <li><a>remix-server.jsx</a></li>
        </ul>
      </div>
    </div>
    <!--/$-->
    <script>
      __remixContext = {
        browserManifest: {
          \\"entry-browser\\": {
            fileName: \\"entry-browser.js\\",
            imports: [
              \\"index-d9da1d1d.js\\",
              \\"index-dcc9183b.js\\",
              \\"index-76e7e8b5.js\\",
            ],
          },
          \\"global.css\\": { fileName: \\"assets/global-ec887178.css\\" },
          \\"routes/gists\\": {
            fileName: \\"routes/gists.js\\",
            imports: [
              \\"index-d9da1d1d.js\\",
              \\"index-dcc9183b.js\\",
              \\"index-76e7e8b5.js\\",
            ],
          },
          \\"routes/gists/index\\": {
            fileName: \\"routes/gists/index.js\\",
            imports: [
              \\"index-d9da1d1d.js\\",
              \\"index-dcc9183b.js\\",
              \\"index-76e7e8b5.js\\",
            ],
          },
          \\"style/routes/gists.css\\": {
            fileName: \\"assets/style/routes/gists-d45b2a57.css\\",
          },
        },
        globalData: { useScripts: true },
        publicPath: \\"/build/\\",
        routeData: {
          \\"routes/gists\\": {
            users: [
              { id: \\"ryanflorence\\", name: \\"Ryan Florence\\" },
              { id: \\"mjackson\\", name: \\"Michael Jackson\\" },
            ],
          },
          \\"routes/gists/index\\": [
            {
              url:
                \\"https://api.github.com/gists/610613b54e5b34f8122d1ba4a3da21a9\\",
              id: \\"610613b54e5b34f8122d1ba4a3da21a9\\",
              files: { \\"remix-server.jsx\\": { filename: \\"remix-server.jsx\\" } },
              owner: {
                login: \\"ryanflorence\\",
                id: 100200,
                avatar_url:
                  \\"https://avatars0.githubusercontent.com/u/100200?v=4\\",
              },
            },
          ],
        },
        routeManifest: {
          \\"routes/gists\\": { id: \\"routes/gists\\", path: \\"gists\\" },
          \\"routes/gists/index\\": {
            id: \\"routes/gists/index\\",
            path: \\"/\\",
            parentId: \\"routes/gists\\",
          },
        },
        routeParams: { \\"routes/gists\\": {}, \\"routes/gists/index\\": {} },
      };
    </script>
    <script type=\\"module\\" src=\\"/build/entry-browser.js\\"></script>
  </body>
</html>
"
`;

exports[`data loading transitioning back after a reload loads data for the previous route 3`] = `
Object {
  "routes/gists": Object {
    "type": "copy",
  },
  "routes/gists/index": Object {
    "data": Array [
      Object {
        "files": Object {
          "remix-server.jsx": Object {
            "filename": "remix-server.jsx",
          },
        },
        "id": "610613b54e5b34f8122d1ba4a3da21a9",
        "owner": Object {
          "avatar_url": "https://avatars0.githubusercontent.com/u/100200?v=4",
          "id": 100200,
          "login": "ryanflorence",
        },
        "url": "https://api.github.com/gists/610613b54e5b34f8122d1ba4a3da21a9",
      },
    ],
    "type": "data",
  },
}
`;

exports[`data loading transitioning back after a reload loads data for the previous route 4`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"utf-8\\" />
    <!--$-->
    <title>Public Gists</title>
    <meta name=\\"description\\" content=\\"View the latest gists from the public\\" />
    <!--/$-->
    <link
      rel=\\"stylesheet\\"
      href=\\"//unpkg.com/@exampledev/new.css@1.1.3/new.css\\"
    />
    <!--$-->
    <link rel=\\"stylesheet\\" href=\\"/build/assets/global-ec887178.css\\" />
    <link
      rel=\\"stylesheet\\"
      href=\\"/build/assets/style/routes/gists-d45b2a57.css\\"
    />
    <!--/$-->
  </head>
  <body class=\\"m-4\\">
    <!--$-->
    <div data-test-id=\\"/gists\\">
      <header>
        <h1>Gists</h1>
        <ul>
          <li>
            <a class=\\"text-blue-700 underline\\" href=\\"/gists/ryanflorence\\"
              >Ryan Florence<!-- -->
            </a>
          </li>
          <li>
            <a class=\\"text-blue-700 underline\\" href=\\"/gists/mjackson\\"
              >Michael Jackson<!-- -->
            </a>
          </li>
        </ul>
      </header>
      <div data-test-id=\\"/gists/index\\">
        <h2>Public Gists</h2>
        <ul>
          <li><a>remix-server.jsx</a></li>
        </ul>
      </div>
    </div>
    <!--/$-->
    <script>
      __remixContext = {
        browserManifest: {
          \\"entry-browser\\": {
            fileName: \\"entry-browser.js\\",
            imports: [
              \\"index-d9da1d1d.js\\",
              \\"index-dcc9183b.js\\",
              \\"index-76e7e8b5.js\\",
            ],
          },
          \\"global.css\\": { fileName: \\"assets/global-ec887178.css\\" },
          \\"routes/gists\\": {
            fileName: \\"routes/gists.js\\",
            imports: [
              \\"index-d9da1d1d.js\\",
              \\"index-dcc9183b.js\\",
              \\"index-76e7e8b5.js\\",
            ],
          },
          \\"routes/gists/$username\\": {
            fileName: \\"routes/gists/$username.js\\",
            imports: [
              \\"index-d9da1d1d.js\\",
              \\"index-dcc9183b.js\\",
              \\"index-76e7e8b5.js\\",
            ],
          },
          \\"style/routes/gists.css\\": {
            fileName: \\"assets/style/routes/gists-d45b2a57.css\\",
          },
        },
        globalData: { useScripts: true },
        publicPath: \\"/build/\\",
        routeData: {
          \\"routes/gists\\": {
            users: [
              { id: \\"ryanflorence\\", name: \\"Ryan Florence\\" },
              { id: \\"mjackson\\", name: \\"Michael Jackson\\" },
            ],
          },
          \\"routes/gists/$username\\": [
            {
              url:
                \\"https://api.github.com/gists/610613b54e5b34f8122d1ba4a3da21a9\\",
              id: \\"610613b54e5b34f8122d1ba4a3da21a9\\",
              files: { \\"remix-server.jsx\\": { filename: \\"remix-server.jsx\\" } },
              owner: {
                login: \\"ryanflorence\\",
                id: 100200,
                avatar_url:
                  \\"https://avatars0.githubusercontent.com/u/100200?v=4\\",
              },
            },
          ],
        },
        routeManifest: {
          \\"routes/gists\\": { id: \\"routes/gists\\", path: \\"gists\\" },
          \\"routes/gists/$username\\": {
            id: \\"routes/gists/$username\\",
            path: \\":username\\",
            parentId: \\"routes/gists\\",
          },
        },
        routeParams: {
          \\"routes/gists\\": {},
          \\"routes/gists/$username\\": { username: \\"mjackson\\" },
        },
      };
    </script>
    <script type=\\"module\\" src=\\"/build/entry-browser.js\\"></script>
  </body>
</html>
"
`;

exports[`data loading transitioning to a new route loads data for the new route 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"utf-8\\" />
    <!--$-->
    <title>Gists Fixture App</title>
    <meta
      name=\\"description\\"
      content=\\"We're just tryin' to make sure stuff works, ya know?!\\"
    />
    <!--/$-->
    <link
      rel=\\"stylesheet\\"
      href=\\"//unpkg.com/@exampledev/new.css@1.1.3/new.css\\"
    />
    <!--$-->
    <link rel=\\"stylesheet\\" href=\\"/build/assets/global-ec887178.css\\" />
    <!--/$-->
  </head>
  <body class=\\"m-4\\">
    <!--$-->
    <div data-test-id=\\"/\\">
      <header><h1>Cool Gists App</h1></header>
      <nav>
        <ul>
          <li>
            <a class=\\"text-blue-700 underline\\" href=\\"/gists\\">View Some gists</a>
          </li>
          <li>
            <a class=\\"text-blue-700 underline\\" href=\\"/user-gists/ryanflorence\\"
              >Server Redirect</a
            >
          </li>
          <li>
            <a class=\\"text-blue-700 underline\\" href=\\"/fart\\">Broken link</a>
          </li>
        </ul>
      </nav>
    </div>
    <!--/$-->
    <script>
      __remixContext = {
        browserManifest: {
          \\"entry-browser\\": {
            fileName: \\"entry-browser.js\\",
            imports: [
              \\"index-d9da1d1d.js\\",
              \\"index-dcc9183b.js\\",
              \\"index-76e7e8b5.js\\",
            ],
          },
          \\"global.css\\": { fileName: \\"assets/global-ec887178.css\\" },
          \\"routes/index\\": {
            fileName: \\"routes/index.js\\",
            imports: [
              \\"index-d9da1d1d.js\\",
              \\"index-dcc9183b.js\\",
              \\"index-76e7e8b5.js\\",
            ],
          },
        },
        globalData: { useScripts: true },
        publicPath: \\"/build/\\",
        routeData: { \\"routes/index\\": null },
        routeManifest: { \\"routes/index\\": { id: \\"routes/index\\", path: \\"/\\" } },
        routeParams: { \\"routes/index\\": {} },
      };
    </script>
    <script type=\\"module\\" src=\\"/build/entry-browser.js\\"></script>
  </body>
</html>
"
`;

exports[`data loading transitioning to a new route loads data for the new route 2`] = `
Object {
  "routes/gists": Object {
    "data": Object {
      "users": Array [
        Object {
          "id": "ryanflorence",
          "name": "Ryan Florence",
        },
        Object {
          "id": "mjackson",
          "name": "Michael Jackson",
        },
      ],
    },
    "type": "data",
  },
  "routes/gists/index": Object {
    "data": Array [
      Object {
        "files": Object {
          "remix-server.jsx": Object {
            "filename": "remix-server.jsx",
          },
        },
        "id": "610613b54e5b34f8122d1ba4a3da21a9",
        "owner": Object {
          "avatar_url": "https://avatars0.githubusercontent.com/u/100200?v=4",
          "id": 100200,
          "login": "ryanflorence",
        },
        "url": "https://api.github.com/gists/610613b54e5b34f8122d1ba4a3da21a9",
      },
    ],
    "type": "data",
  },
}
`;

exports[`data loading transitioning to a new route loads data for the new route 3`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"utf-8\\" />
    <!--$-->
    <title>Public Gists</title>
    <meta name=\\"description\\" content=\\"View the latest gists from the public\\" />
    <!--/$-->
    <link
      rel=\\"stylesheet\\"
      href=\\"//unpkg.com/@exampledev/new.css@1.1.3/new.css\\"
    />
    <!--$-->
    <link rel=\\"stylesheet\\" href=\\"/build/assets/global-ec887178.css\\" />
    <!--/$-->
    <link
      rel=\\"stylesheet\\"
      href=\\"/build/assets/style/routes/gists-d45b2a57.css\\"
    />
  </head>
  <body class=\\"m-4\\">
    <!--$--><!--/$-->
    <div data-test-id=\\"/gists\\">
      <header>
        <h1>Gists</h1>
        <ul>
          <li>
            <a class=\\"text-blue-700 underline\\" href=\\"/gists/ryanflorence\\"
              >Ryan Florence
            </a>
          </li>
          <li>
            <a class=\\"text-blue-700 underline\\" href=\\"/gists/mjackson\\"
              >Michael Jackson
            </a>
          </li>
        </ul>
      </header>
      <div data-test-id=\\"/gists/index\\">
        <h2>Public Gists</h2>
        <ul>
          <li><a>remix-server.jsx</a></li>
        </ul>
      </div>
    </div>
    <script>
      __remixContext = {
        browserManifest: {
          \\"entry-browser\\": {
            fileName: \\"entry-browser.js\\",
            imports: [
              \\"index-d9da1d1d.js\\",
              \\"index-dcc9183b.js\\",
              \\"index-76e7e8b5.js\\",
            ],
          },
          \\"global.css\\": { fileName: \\"assets/global-ec887178.css\\" },
          \\"routes/index\\": {
            fileName: \\"routes/index.js\\",
            imports: [
              \\"index-d9da1d1d.js\\",
              \\"index-dcc9183b.js\\",
              \\"index-76e7e8b5.js\\",
            ],
          },
        },
        globalData: { useScripts: true },
        publicPath: \\"/build/\\",
        routeData: { \\"routes/index\\": null },
        routeManifest: { \\"routes/index\\": { id: \\"routes/index\\", path: \\"/\\" } },
        routeParams: { \\"routes/index\\": {} },
      };
    </script>
    <script type=\\"module\\" src=\\"/build/entry-browser.js\\"></script>
  </body>
</html>
"
`;
